PIG-563: support for multiple combiner invocations
git-svn-id: https://svn.apache.org/repos/asf/hadoop/pig/branches/types@729182 13f79535-47bb-0310-9956-ffa450edef68